<resources>
    <string name="app_name">Reon</string>
    <string name="delete_room">Delete Room</string>
    <string name="enter_value">Enter Value</string>
    <string name="create_room">Create Room</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="about">About</string>
    <string name="logged_in_as">Logged in as</string>
    <string name="logout">Logout</string>
    <string name="copy_invite_link">Copy Invite Link</string>
    <string name="leave_room">Leave Room</string>
    <string name="date">Date</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="rename">Rename</string>
    <string name="refresh">Refresh</string>
    <string name="room_info">Room Info</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="admin">Admin</string>
    <string name="delete">Delete</string>
    <string name="select_all">Select All</string>
    <string name="download">Download</string>
    <string name="info">Info</string>
    <string name="members">Members</string>
    <string name="leave">Leave</string>
    <string name="uploadedby">Uploaded By</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remove">Remove</string>
</resources>