<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/room_info_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?ui.panel.border"
    android:orientation="vertical"
    tools:context=".fragments.RoomInfoFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/outer_name_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:background="@drawable/background_view"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dp">

                <FrameLayout
                    android:id="@+id/name_container_frame"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:clickable="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5"
                    android:focusable="true">

                </FrameLayout>

                <ImageView
                    android:id="@+id/name_edit_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_alignParentStart="true"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_edit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="?common.accent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:labelFor="@+id/text_room_name"
                    android:text="@string/name"
                    android:textSize="10sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_room_name"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_edit_icon" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/outer_description_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_view"
                android:padding="10dp"
                android:clickable="true"
                android:focusable="true">

                <FrameLayout
                    android:id="@+id/description_container_frame"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:clickable="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5"
                    android:focusable="true">

                </FrameLayout>

                <ImageView
                    android:id="@+id/description_edit_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_alignParentStart="true"
                    android:adjustViewBounds="true"
                    android:src="@drawable/ic_edit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="?common.accent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:labelFor="@+id/text_room_description"
                    android:text="@string/description"
                    android:textSize="10sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_room_description"
                    style="@style/TextAppearance.MaterialComponents.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description_edit_icon" />

            </androidx.constraintlayout.widget.ConstraintLayout>

<!--            <androidx.constraintlayout.widget.ConstraintLayout-->
<!--                android:id="@+id/linkContainer"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:background="@drawable/background_view"-->
<!--                android:padding="10dp"-->
<!--                android:layout_marginTop="10dp">-->

<!--                <TextView-->
<!--                    android:id="@+id/textView"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:labelFor="@+id/button_copy_link"-->
<!--                    android:text="@string/copy_invite_link"-->
<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
<!--                    app:layout_constraintEnd_toStartOf="@+id/button_copy_link"-->
<!--                    app:layout_constraintHorizontal_bias="0.0"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent" />-->

<!--                <Button-->
<!--                    android:id="@+id/button_copy_link"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:layout_marginStart="10dp"-->
<!--                    android:background="@drawable/background_view_bordered"-->
<!--                    android:minWidth="0dp"-->
<!--                    android:minHeight="0dp"-->
<!--                    android:paddingHorizontal="15dp"-->
<!--                    android:paddingVertical="5dp"-->
<!--                    android:text="Copy"-->
<!--                    android:textColor="?common.accent"-->
<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent" />-->

<!--            </androidx.constraintlayout.widget.ConstraintLayout>-->

<!--            <Button-->
<!--                android:id="@+id/button_leaveRoom"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="30dp"-->
<!--                android:background="@drawable/background_button"-->
<!--                android:paddingHorizontal="15dp"-->
<!--                android:text="@string/leave_room"-->
<!--                android:textColor="@color/white"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintHorizontal_bias="0.5"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/recycler_user_list" />-->

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/member_list_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_view"
                android:padding="10dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:labelFor="@+id/recycler_user_list"
                    android:text="@string/members"
                    android:textSize="10sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_user_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:divider="@null"
                    android:dividerHeight="6dp"
                    android:listSelector="@drawable/list_item_selector"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>